--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 					<h1> Jian Wang (王健) </h1> 
 				</div>
 
-				<h3>PhD Student</h3>
+				<h3>PhD Candidate</h3>
 				<p>
 					Department of Computing, <br>
 					The Hong Kong Polytechnic University, <br>
@@ -46,7 +46,7 @@
 
 
 <p style="text-align:justify";>
-	I am a third-year PhD student at <a href="https://www.polyu.edu.hk/" target="_blank">The Hong Kong Polytechnic University</a>, 
+	Hello! I am a third-year PhD candidate at <a href="https://www.polyu.edu.hk/" target="_blank">The Hong Kong Polytechnic University</a> and a member of <a href="https://polyunlp.github.io/" target="_blank">PolyU NLP Group</a>, 
 	advised by Prof. <a href="http://www4.comp.polyu.edu.hk/~cswjli/" target="_blank"> Maggie Wenjie Li</a>.
 	Currently, I am visiting the <a href="https://sled.eecs.umich.edu/" target="_blank">SLED Lab</a> at <a href="https://umich.edu/" target="_blank">University of Michigan</a>,
 	where I am honored to work with Prof. <a href="https://web.eecs.umich.edu/~chaijy/" target="_blank">Joyce Chai</a>.
@@ -55,7 +55,7 @@
 <p style="text-align:justify";>
 	Before that, I received my MSc and BEng degrees from the School of Computer Science and Engineering, 
 	<a href="https://www.scut.edu.cn/en/" target="_blank">South China University of Technology (SCUT)</a>, in 2020 and 2017, respectively. 
-	During the 2018 to 2019 period, I was fortunate to be co-advised by Prof. <a href="https://minyang.me/" target="_blank">Min Yang</a> at SIAT, Chinese Academy of Sciences.
+	During the 2018 to 2019, I was fortunate to be co-advised by Prof. <a href="https://minyang.me/" target="_blank">Min Yang</a> at SIAT, Chinese Academy of Sciences.
 </p>
 
 
@@ -63,38 +63,60 @@
 <p style="text-align:justify";>
 	I have broad interests in Conversational AI and Natural Language Processing (NLP), including but not limited to the following directions: 
 	<ul>
-	<li> Interactive dialogue systems (e.g., goal/target-directed dialogues, task-oriented dialogues). I am dedicated to empowering agents
-		 to interact with humans through natural, coherent, and proactive conversations.
+	<li> Interactive dialogue systems. I am dedicated to empowering AI agents to converse with humans more proactively (e.g., goal/target-directed dialogues), more consistently, and more tailored to individuals.
 	</li>
 	<li> Natural language generation. I am interested in how world knowledge (e.g., commonsense, social, and physical knowledge) 
 		can be grounded and incorporated in natural language generation.
 	</li>
 	<li>
 		Situated and multimodal interactions. I am interested in human-AI collaborations in specific scenarios and 
-		learning from situated communications (e.g., situated dialogues).
+		learning from situated communications.
 	</li>
-	
 	</ul>
+</p>
+<p style="text-align:justify";>
+	😀 <i>I am open to collaborations and discussions. Please feel free to reach out to me if you are interested in my research or any relevant topics.</i>
+</p>
+
+
+
+<h2> News </h2>
+<p style="text-align:justify";>
+	
+
+			[May 2024] 🔥 Got one paper accepted by <a href="https://2024.aclweb.org/" target="_blank">ACL 2024</a>! Welcome to have a chat in Bangkok.
+		</p>
+		<p style="text-align:justify";>
+			[Dec. 2023] 🔥 Will be visiting the <a href="https://sled.eecs.umich.edu/" target="_blank">SLED Lab</a> at <a href="https://umich.edu/" target="_blank">University of Michigan</a>, starting from Feb. 2024. Very excited!
+		</p>
+		<p style="text-align:justify";>
+			[Oct. 2023] &nbsp Got two papers accepted by <a href="https://2023.emnlp.org/" target="_blank">EMNLP 2023</a>! Will be heading to Singpore in December.
+		</p>
+		<p style="text-align:justify";>
+			[Jul. 2023] &nbsp Will be heading to Toronto for <a href="https://2023.aclweb.org/" target="_blank">ACL 2023</a>. The first time to attend an in-person academic conference during my PhD and to visit abroad during my life!
+		</p>
+		<p style="text-align:justify";>
+			[May 2023] &nbsp Got two papers accepted as Findings of ACL 2023!
+		</p>
+			<p style="text-align:justify";>
+			[Apr. 2023] &nbsp Passed the confirmation of registration at PolyU. Officially became a PhD candidate!
+	
 </p>
 
 
 <h2> Selected Publications  
-<h4>(see full list in <a href="https://scholar.google.com/citations?user=HUtas_0gHGIC&hl=en">Google Scholar</a>)</h4>
+<h4>(see full list in <a href="https://scholar.google.com/citations?user=HUtas_0gHGIC&hl=en" target="_blank">Google Scholar</a>)</h4>
 </h2>
 
-<p> Preprint </p>
+<p> 2021 - Present </p>
 <ul>
 	<li><p style="margin-left: 0px; line-height: 140%; margin-top: 10px; margin-bottom: 10px;">
 		<h3>Instruct Once, Chat Consistently in Multiple Rounds: An Efficient Tuning Framework for Dialogue</h3> 
 		<b>Jian Wang</b>, Chak Tou Leong, Jiashuo Wang, Dongding Lin, Wenjie Li, and Xiao-Yong Wei. <br>
-		<i>arXiv:2402.06967, 2024.</i> <br>
+		<i>The 62nd Annual Meeting of the Association for Computational Linguistics (ACL), 2024.</i> <br>
 		[<a href="https://arxiv.org/abs/2402.06967">arXiv</a>]
 	    </p>
 	</li>
-</ul>
-
-<p> 2021 - Present </p>
-<ul>
 	<li> <p style="margin-left: 0px; line-height: 140%; margin-top: 10px; margin-bottom: 10px;">
 		<h3>Target-constrained Bidirectional Planning for Generation of Target-oriented Proactive Dialogue</h3> 
 		<b>Jian Wang</b>, Dongding Lin, and Wenjie Li. <br>
@@ -116,7 +138,7 @@
 	<li> <p style="margin-left: 0px; line-height: 140%; margin-top: 10px; margin-bottom: 10px;">
 		<h3>Target-oriented Proactive Dialogue Systems with Personalization: Problem Formulation and Dataset Curation</h3> 
 		<b>Jian Wang</b>, Yi Cheng, Dongding Lin, Chak Tou Leong, and Wenjie Li. <br>
-		<i>Proceedings of the Conference on Empirical Methods in Natural Language Processing (EMNLP), 2023.</i> <br>
+		<i>The 2023 Conference on Empirical Methods in Natural Language Processing (EMNLP), 2023.</i> <br>
 		[<a href="https://arxiv.org/abs/2310.07397">arXiv</a>]
 		[<a href="https://aclanthology.org/2023.emnlp-main.72/">paper</a>]
 		[<a href="https://github.com/iwangjian/TopDial">code</a>]
@@ -125,7 +147,7 @@
 	<li> <p style="margin-left: 0px; line-height: 140%; margin-top: 10px; margin-bottom: 10px;">
 		<h3>Self-Detoxifying Language Models via Toxification Reversal</h3> 
 		Chak Tou Leong, Yi Cheng, Jiashuo Wang, <b>Jian Wang</b>, and Wenjie Li. <br>
-		<i>Proceedings of the Conference on Empirical Methods in Natural Language Processing (EMNLP), 2023.</i> <br>
+		<i>The 2023 Conference on Empirical Methods in Natural Language Processing (EMNLP), 2023.</i> <br>
 		[<a href="https://arxiv.org/abs/2310.09573">arXiv</a>]
 		[<a href="https://aclanthology.org/2023.emnlp-main.269/">paper</a>]
 		[<a href="https://github.com/cooperleong00/ToxificationReversal">code</a>]
@@ -268,8 +290,8 @@
     <strong> Open-Source Projects </strong> <br>
 </p>
 	<ul style="list-style-type:none">
-		<li><a href="https://github.com/iwangjian/Paper-Reading-ConvAI">📖 Paper-Reading-ConvAI</a>: Reading list in dialogue systems and natural language generation.</li>
-		<li><a href="https://github.com/iwangjian/pyloader">🐳 PyLoader</a>: An asynchronous Python dataloader for loading big datasets.</li>
+		<li><a href="https://github.com/iwangjian/Paper-Reading-ConvAI" target="_blank">📖 Paper-Reading-ConvAI</a>: Reading list in dialogue systems and natural language generation.</li>
+		<li><a href="https://github.com/iwangjian/pyloader" target="_blank">🐳 PyLoader</a>: An asynchronous Python dataloader for loading big datasets.</li>
 	</ul>
 
 
@@ -284,7 +306,7 @@
 	<li> <a href="https://lilianweng.github.io/" target="_blank">🍑 Lilian Weng's Blog</a>:  Lilian Weng's blog with broad learning notes about DL/NLP.</li>
 	<li> <a href="https://jalammar.github.io/" target="_blank">📸 Jay Alammar's Blog</a>: Visualizations and animations for many language models (Transformer, BERT, etc). </li>
 	<li> <a href="https://kexue.fm/" target="_blank">📡 Scientific Spaces</a>: Jianlin Su's blog (in Chinese) about ML|NLP theories with deep explorations.</li>
-	<li> <a href="https://github.com/zhijing-jin/nlp-phd-global-equality" target="_blank">👩‍🎓 Global Equality for PhDs</a>: Resources to help global equality for PhDs in NLP/AI. </li>
+	<li> <a href="https://github.com/zhijing-jin/nlp-phd-global-equality" target="_blank">👩‍🎓 Global Equality for PhDs</a>: Resources to help global equality for PhDs in NLP/AI, contributed by Zhijing Jin. </li>
 	
 </ul>
 
@@ -307,7 +329,7 @@
         </div>
 	<p>
 		<center>
-        <br> 2020-2024 &copy; Jian Wang | Last updated: Mar. 2024
+        <br> 2020-2024 &copy; Jian Wang | Last updated: May 2024
 		</center>
 	</p>		
 </div>
