--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
 
 <p style="text-align:justify";>
-	Hello! I am a third-year PhD candidate at <a href="https://www.polyu.edu.hk/" target="_blank">The Hong Kong Polytechnic University</a> and a member of <a href="https://polyunlp.github.io/" target="_blank">PolyU NLP Group</a>, 
+	Hi! I am a third-year PhD candidate at <a href="https://www.polyu.edu.hk/" target="_blank">The Hong Kong Polytechnic University</a> and a member of <a href="https://polyunlp.github.io/" target="_blank">PolyU NLP Group</a>, 
 	advised by Prof. <a href="http://www4.comp.polyu.edu.hk/~cswjli/" target="_blank"> Maggie Wenjie Li</a>.
 	Currently, I am visiting the <a href="https://sled.eecs.umich.edu/" target="_blank">SLED Lab</a> at <a href="https://umich.edu/" target="_blank">University of Michigan</a>,
 	where I am honored to work with Prof. <a href="https://web.eecs.umich.edu/~chaijy/" target="_blank">Joyce Chai</a>.
@@ -61,15 +61,16 @@
 
 <h2>Research</h2>
 <p style="text-align:justify";>
-	I have broad interests in Conversational AI and Natural Language Processing (NLP), including but not limited to the following directions: 
+	I have broad interests in Conversational AI and Natural Language Processing (NLP), including but not limited to the following topics: 
 	<ul>
-	<li> Interactive dialogue systems. I am dedicated to empowering AI agents to converse with humans more proactively (e.g., goal/target-directed dialogues), more consistently, and more tailored to individuals.
+	<li> 
+		<b>Interactive dialogue systems</b>. I am dedicated to empowering AI agents to converse with humans more proactively (e.g., goal/target-directed dialogues), more consistently, and more tailored to individuals.
 	</li>
-	<li> Natural language generation. I am interested in how world knowledge (e.g., commonsense, social, and physical knowledge) 
-		can be grounded and incorporated in natural language generation.
+	<li> 
+		<b>Controllable language generation</b>. I am interested in controlling natural language generation by planning with world knowledge (e.g., commonsense, social, and physical knowledge).
 	</li>
 	<li>
-		Situated and multimodal interactions. I am interested in human-AI collaborations in specific scenarios and 
+		<b>Situated and multimodal interactions</b>. I am interested in human-AI collaborations in specific scenarios and 
 		learning from situated communications.
 	</li>
 	</ul>
