--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
 </p>
 	<ul style="list-style-type:none">
 		<li>Conferences: ACL Rolling Review (ARR), ACL (2023, 2024), EMNLP (2022, 2023), COLING (2020, 2022)</li>
-		<li>Journal: Transactions on Knowledge and Data Engineering (TKDE)</li>
+		<li>Journal: TKDE, TNNLS</li>
 	</ul>
 	
 <p style="margin-left: 0px; line-height: 120%; margin-top: 15px; margin-bottom: 15px;">
