--- a/index.html
+++ b/index.html
@@ -116,6 +116,7 @@
 		<b>Jian Wang</b>, Chak Tou Leong, Jiashuo Wang, Dongding Lin, Wenjie Li, and Xiao-Yong Wei. <br>
 		<i>The 62nd Annual Meeting of the Association for Computational Linguistics (ACL), 2024.</i> <br>
 		[<a href="https://arxiv.org/abs/2402.06967">arXiv</a>]
+		[<a href="https://github.com/iwangjian/Midi-Tuning">code</a>]
 	    </p>
 	</li>
 	<li> <p style="margin-left: 0px; line-height: 140%; margin-top: 10px; margin-bottom: 10px;">
