--- a/index.html
+++ b/index.html
@@ -109,6 +109,17 @@
 <h4>(see full list in <a href="https://scholar.google.com/citations?user=HUtas_0gHGIC&hl=en" target="_blank">Google Scholar</a>)</h4>
 </h2>
 
+<p> Preprint </p>
+<ul>
+	<li><p style="margin-left: 0px; line-height: 140%; margin-top: 10px; margin-bottom: 10px;">
+		<h3>No Two Devils Alike: Unveiling Distinct Mechanisms of Fine-tuning Attacks</h3> 
+		Chak Tou Leong, Yi Cheng, Kaishuai Xu, <b>Jian Wang</b>, Hanlin Wang, Wenjie Li<br>
+		<i>arXiv:2405.16229, 2024.</i> <br>
+		[<a href="https://arxiv.org/abs/2405.16229">arXiv</a>]
+	    </p>
+	</li>
+</ul>
+
 <p> 2021 - Present </p>
 <ul>
 	<li><p style="margin-left: 0px; line-height: 140%; margin-top: 10px; margin-bottom: 10px;">
