--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 					<b>Email</b>: <tt>jian-dylan.wang (at) connect.polyu.hk</tt> &nbsp or <br>
 					&nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp<tt>jwanglvy (at) gmail.com</tt> <br>
 					<br>
-					<a href="https://iwangjian.github.io/pdf/Jian_Wang_CV.pdf"><img src="pic/cv-96.png" height="25px" style="margin-bottom:-5px"> Resume</a> &nbsp | &nbsp
+					<a href="https://iwangjian.github.io/pdf/Jian_Wang_CV.pdf"><img src="pic/cv-96.png" height="25px" style="margin-bottom:-5px"> Curriculum Vitae</a> &nbsp | &nbsp
 					<a href="https://github.com/iwangjian"><img src="pic/github-96.png" height="25px" style="margin-bottom:-5px"> Github</a> &nbsp | &nbsp
 					<a href="https://scholar.google.com/citations?user=HUtas_0gHGIC&hl=en"><img src="pic/google-scholar-96.png" height="25px" style="margin-bottom:-5px"> Google Scholar</a> &nbsp | &nbsp
 					<a href="https://twitter.com/jwanglvy"><img src="pic/twitter-100.png" height="25px" style="margin-bottom:-5px"> Twitter</a>
@@ -48,30 +48,29 @@
 <p style="text-align:justify";>
 	Hi! I am a third-year PhD candidate at <a href="https://www.polyu.edu.hk/" target="_blank">The Hong Kong Polytechnic University</a> and a member of <a href="https://polyunlp.github.io/" target="_blank">PolyU NLP Group</a>, 
 	advised by Prof. <a href="http://www4.comp.polyu.edu.hk/~cswjli/" target="_blank"> Maggie Wenjie Li</a>.
-	Currently, I am visiting the <a href="https://sled.eecs.umich.edu/" target="_blank">SLED Lab</a> at <a href="https://umich.edu/" target="_blank">University of Michigan</a>,
-	where I am honored to work with Prof. <a href="https://web.eecs.umich.edu/~chaijy/" target="_blank">Joyce Chai</a>.
+	During 2024, I was visiting the <a href="https://sled.eecs.umich.edu/" target="_blank">SLED Lab</a> at <a href="https://umich.edu/" target="_blank">University of Michigan</a>,
+	where I was so honored to work with Prof. <a href="https://web.eecs.umich.edu/~chaijy/" target="_blank">Joyce Chai</a>.
 	
 </p>
 <p style="text-align:justify";>
 	Before that, I received my MSc and BEng degrees from the School of Computer Science and Engineering, 
-	<a href="https://www.scut.edu.cn/en/" target="_blank">South China University of Technology (SCUT)</a>, in 2020 and 2017, respectively. 
+	<a href="https://www.scut.edu.cn/en/" target="_blank">South China University of Technology</a>, in 2020 and 2017, respectively. 
 	During the 2018 to 2019, I was fortunate to be co-advised by Prof. <a href="https://minyang.me/" target="_blank">Min Yang</a> at SIAT, Chinese Academy of Sciences.
 </p>
 
 
 <h2>Research</h2>
 <p style="text-align:justify";>
-	I have broad interests in Conversational AI and Natural Language Processing (NLP), including but not limited to the following topics: 
+	I have broad interests in Natural Language Processing (NLP) and Conversational AI, including but not limited to the following topics: 
 	<ul>
 	<li> 
-		<b>Interactive dialogue systems</b>. I am dedicated to empowering AI agents to converse with humans more proactively (e.g., goal/target-directed dialogues), more consistently, and more tailored to individuals.
+		<b>Interactive dialogue agents</b>. I am dedicated to empowering AI agents to converse with humans more proactively (e.g., goal/target-directed dialogues), more consistently, and more tailored to individuals.
 	</li>
 	<li> 
-		<b>Controllable language generation</b>. I am interested in controlling natural language generation by planning with world knowledge (e.g., commonsense, social, and physical knowledge).
+		<b>Controllable language generation</b>. I am interested in controlling the generation of LLMs by planning with world knowledge (e.g., social and physical knowledge).
 	</li>
 	<li>
-		<b>Situated and multimodal interactions</b>. I am interested in human-AI collaborations in specific scenarios and 
-		learning from situated communications.
+		<b>Situated interactions and multimodal learning</b>. I am interested in human-AI interactions in a specific situation (environment) and learning from visual perceptions, lanuage communications, and actions.
 	</li>
 	</ul>
 </p>
@@ -127,6 +126,7 @@
 		<b>Jian Wang</b>, Chak Tou Leong, Jiashuo Wang, Dongding Lin, Wenjie Li, and Xiao-Yong Wei. <br>
 		<i>The 62nd Annual Meeting of the Association for Computational Linguistics (ACL), 2024.</i> <br>
 		[<a href="https://arxiv.org/abs/2402.06967">arXiv</a>]
+		[<a href="https://aclanthology.org/2024.acl-long.219/">paper</a>]
 		[<a href="https://github.com/iwangjian/Midi-Tuning">code</a>]
 	    </p>
 	</li>
@@ -237,7 +237,7 @@
 <h2> Experiences </h2>
 <ul>
 	<li> 
-		2024/02 - Present: Visiting PhD Student at <a href="https://umich.edu/" target="_blank">University of Michigan</a>
+		2024/02 - 2024/06: Visiting PhD Student at <a href="https://umich.edu/" target="_blank">University of Michigan</a>
 		(Advisor: Prof. <a href="https://web.eecs.umich.edu/~chaijy/" target="_blank">	Joyce Chai</a>)
 	</li>
 	<li> 
@@ -295,7 +295,8 @@
     <strong> Reviewer </strong> <br> 
 </p>
 	<ul style="list-style-type:none">
-		<li>Conferences: ACL Rolling Review (ARR), ACL (2023, 2024), EMNLP (2022, 2023), COLING (2020, 2022)</li>
+		<li>Reviewer for ACL Rolling Review (ARR)</li>
+		<li>Conferences: ACL (2023, 2024), EMNLP (2022, 2023, 2024), COLING (2020, 2022)</li>
 		<li>Journal: TKDE, TNNLS</li>
 	</ul>
 	
@@ -342,7 +343,7 @@
         </div>
 	<p>
 		<center>
-        <br> 2020-2024 &copy; Jian Wang | Last updated: May 2024
+        <br> 2020-2024 &copy; Jian Wang | Last updated: August 2024
 		</center>
 	</p>		
 </div>
