--- a/index.html
+++ b/index.html
@@ -48,14 +48,14 @@
 <p style="text-align:justify";>
 	Hi! I am a third-year PhD candidate at <a href="https://www.polyu.edu.hk/" target="_blank">The Hong Kong Polytechnic University</a> and a member of <a href="https://polyunlp.github.io/" target="_blank">PolyU NLP Group</a>, 
 	advised by Prof. <a href="http://www4.comp.polyu.edu.hk/~cswjli/" target="_blank"> Maggie Wenjie Li</a>.
-	During 2024, I was visiting the <a href="https://sled.eecs.umich.edu/" target="_blank">SLED Lab</a> at <a href="https://umich.edu/" target="_blank">University of Michigan</a>,
+	During the spring and summer of 2024, I visited the <a href="https://sled.eecs.umich.edu/" target="_blank">SLED Lab</a> at <a href="https://umich.edu/" target="_blank">University of Michigan</a>,
 	where I was so honored to work with Prof. <a href="https://web.eecs.umich.edu/~chaijy/" target="_blank">Joyce Chai</a>.
 	
 </p>
 <p style="text-align:justify";>
-	Before that, I received my MSc and BEng degrees from the School of Computer Science and Engineering, 
+	Prior to that, I received my MSc and BEng degrees from the School of Computer Science and Engineering, 
 	<a href="https://www.scut.edu.cn/en/" target="_blank">South China University of Technology</a>, in 2020 and 2017, respectively. 
-	During the 2018 to 2019, I was fortunate to be co-advised by Prof. <a href="https://minyang.me/" target="_blank">Min Yang</a> at SIAT, Chinese Academy of Sciences.
+	From 2018 to 2019, I was fortunate to be co-advised by Prof. <a href="https://minyang.me/" target="_blank">Min Yang</a> at SIAT, Chinese Academy of Sciences.
 </p>
 
 
