--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
 
 <p style="text-align:justify";>
-	Hi! I am a third-year PhD candidate at <a href="https://www.polyu.edu.hk/" target="_blank">The Hong Kong Polytechnic University</a> and a member of <a href="https://polyunlp.github.io/" target="_blank">PolyU NLP Group</a>, 
+	Hi! I am a last-year PhD candidate at <a href="https://www.polyu.edu.hk/" target="_blank">The Hong Kong Polytechnic University</a> and a member of <a href="https://polyunlp.github.io/" target="_blank">PolyU NLP Group</a>, 
 	advised by Prof. <a href="http://www4.comp.polyu.edu.hk/~cswjli/" target="_blank"> Maggie Wenjie Li</a>.
 	During the spring and summer of 2024, I visited the <a href="https://sled.eecs.umich.edu/" target="_blank">SLED Lab</a> at <a href="https://umich.edu/" target="_blank">University of Michigan</a>,
 	where I was so honored to work with Prof. <a href="https://web.eecs.umich.edu/~chaijy/" target="_blank">Joyce Chai</a>.
