--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 					<h1> Jian Wang (王健) </h1> 
 				</div>
 
-				<h3>PhD Candidate</h3>
+				<h3>PhD</h3>
 				<p>
 					Department of Computing, <br>
 					The Hong Kong Polytechnic University, <br>
@@ -46,40 +46,42 @@
 
 
 <p style="text-align:justify";>
-	Hi! I am a last-year PhD candidate at <a href="https://www.polyu.edu.hk/" target="_blank">The Hong Kong Polytechnic University</a> and a member of <a href="https://polyunlp.github.io/" target="_blank">PolyU NLP Group</a>, 
-	advised by Prof. <a href="http://www4.comp.polyu.edu.hk/~cswjli/" target="_blank"> Maggie Wenjie Li</a>.
+	Hi! I am a member of <a href="https://polyunlp.github.io/" target="_blank">PolyU NLP Group</a>. I obtained my PhD degree from <a href="https://www.polyu.edu.hk/" target="_blank">The Hong Kong Polytechnic University</a>, 
+	supervised by Prof. <a href="http://www4.comp.polyu.edu.hk/~cswjli/" target="_blank"> Maggie Wenjie Li</a>.
 	During the spring and summer of 2024, I visited the <a href="https://sled.eecs.umich.edu/" target="_blank">SLED Lab</a> at <a href="https://umich.edu/" target="_blank">University of Michigan</a>,
 	where I was so honored to work with Prof. <a href="https://web.eecs.umich.edu/~chaijy/" target="_blank">Joyce Chai</a>.
 	
 </p>
 <p style="text-align:justify";>
 	Prior to that, I received my MSc and BEng degrees from the School of Computer Science and Engineering, 
-	<a href="https://www.scut.edu.cn/en/" target="_blank">South China University of Technology</a>, in 2020 and 2017, respectively. 
-	From 2018 to 2019, I was fortunate to be co-advised by Prof. <a href="https://minyang.me/" target="_blank">Min Yang</a> at SIAT, Chinese Academy of Sciences.
+	<a href="https://www.scut.edu.cn/en/" target="_blank">South China University of Technology</a>. 
+	During my graduate studies, I was fortunate to be co-advised by Prof. <a href="https://minyang.me/" target="_blank">Min Yang</a> at SIAT, Chinese Academy of Sciences.
 </p>
 
 
 <h2> News </h2>
 <p style="text-align:justify";>
-	
-
-			[May 2024] 🔥 Got one paper accepted by <a href="https://2024.aclweb.org/" target="_blank">ACL 2024</a>! Welcome to have a chat in Bangkok.
-		</p>
-		<p style="text-align:justify";>
-			[Dec. 2023] 🔥 Will be visiting the <a href="https://sled.eecs.umich.edu/" target="_blank">SLED Lab</a> at <a href="https://umich.edu/" target="_blank">University of Michigan</a>, starting from Feb. 2024. Very excited!
-		</p>
-		<p style="text-align:justify";>
-			[Oct. 2023] &nbsp Got two papers accepted by <a href="https://2023.emnlp.org/" target="_blank">EMNLP 2023</a>! Will be heading to Singpore in December.
-		</p>
-		<p style="text-align:justify";>
-			[Jul. 2023] &nbsp Will be heading to Toronto for <a href="https://2023.aclweb.org/" target="_blank">ACL 2023</a>. The first time to attend an in-person academic conference during my PhD and to visit abroad during my life!
-		</p>
-		<p style="text-align:justify";>
-			[May 2023] &nbsp Got two papers accepted as Findings of ACL 2023!
-		</p>
-			<p style="text-align:justify";>
-			[Apr. 2023] &nbsp Passed the confirmation of registration at PolyU. Officially became a PhD candidate!
-	
+	<p style="text-align:justify";>
+		[Sep. 2024] 🔥 Defended my PhD thesis. Huge thanks to all my committee members!
+	</p>
+	<p style="text-align:justify";>
+		[May 2024] 🔥 Got one paper accepted by <a href="https://2024.aclweb.org/" target="_blank">ACL 2024</a>! Welcome to have a chat in Bangkok.
+	</p>
+	<p style="text-align:justify";>
+		[Dec. 2023] &nbsp Will be visiting the <a href="https://sled.eecs.umich.edu/" target="_blank">SLED Lab</a> at <a href="https://umich.edu/" target="_blank">University of Michigan</a>, starting from Feb. 2024. Very excited!
+	</p>
+	<p style="text-align:justify";>
+		[Oct. 2023] &nbsp Got two papers accepted by <a href="https://2023.emnlp.org/" target="_blank">EMNLP 2023</a>! Will be heading to Singpore in December.
+	</p>
+	<p style="text-align:justify";>
+		[Jul. 2023] &nbsp Will be heading to Toronto for <a href="https://2023.aclweb.org/" target="_blank">ACL 2023</a>. The first time to attend an in-person academic conference during my PhD and to visit abroad during my life!
+	</p>
+	<p style="text-align:justify";>
+		[May 2023] &nbsp Got two papers accepted as Findings of ACL 2023!
+	</p>
+	<p style="text-align:justify";>
+		[Apr. 2023] &nbsp Passed the confirmation of registration at PolyU. Officially became a PhD candidate!
+	</p>
 </p>
 
 
@@ -88,13 +90,13 @@
 	I have broad interests in Natural Language Processing (NLP) and Conversational AI, including but not limited to the following topics: 
 	<ul>
 	<li> 
-		<b>Interactive dialogue agents</b>. I am dedicated to empowering AI agents to converse with humans more proactively (e.g., goal/target-directed dialogues), more consistently, and more tailored to individuals.
+		<b>Interactive dialogue agents</b>. I am dedicated to empowering dialogue agents to interact with humans more proactively (e.g., goal/target-directed dialogues), more consistently, and more tailored to individuals.
 	</li>
 	<li> 
-		<b>Controllable language generation</b>. I am interested in controlling the generation of LLMs by planning with world knowledge (e.g., social and physical knowledge).
+		<b>Controllable language generation</b>. I am interested in controlling the generation of LMs for a wide range of NLP applications.
 	</li>
 	<li>
-		<b>Situated interactions and multimodal learning</b>. I am interested in human-AI interactions in a specific situation (environment) and learning from visual perceptions, lanuage communications, and actions.
+		<b>Situated interactions and multimodal learning</b>. I am interested in human-AI interactions in a specific situation (environment) and learning from visual perceptions, lanuage communications, and physical actions.
 	</li>
 	</ul>
 </p>
@@ -103,8 +105,8 @@
 </p>
 
 
-<h2> Selected Publications  
-<h4>(see full list in <a href="https://scholar.google.com/citations?user=HUtas_0gHGIC&hl=en" target="_blank">Google Scholar</a>)</h4>
+<h2> Selected Publications
+<h4>(see full list in <a href="https://scholar.google.com/citations?user=HUtas_0gHGIC&hl=en" target="_blank">Google Scholar</a>) (*: equal contribution)</h4>
 </h2>
 
 <p> Preprint </p>
@@ -120,6 +122,21 @@
 
 <p> 2021 - Present </p>
 <ul>
+	<li><p style="margin-left: 0px; line-height: 140%; margin-top: 10px; margin-bottom: 10px;"></p>
+		<h3>E2CL: Exploration-based Error Correction Learning for Embodied Agents</h3> 
+		Hanlin Wang*, Chak Tou Leong*, <b>Jian Wang</b>, and Wenjie Li.  <br>
+		<i>Findings of the Association for Computational Linguistics: EMNLP (EMNLP-Findings), 2024</i> <br>
+		[<a href="https://arxiv.org/abs/2409.03256">arXiv</a>]
+	    </p>
+	</li>
+	<li><p style="margin-left: 0px; line-height: 140%; margin-top: 10px; margin-bottom: 10px;"></p>
+		<h3>SCREEN: A Benchmark for Situated Conversational Recommendation</h3> 
+		Dongding Lin*, <b>Jian Wang</b>*, Chak Tou Leong, and Wenjie Li.<br>
+		<i>The 32nd ACM International Conference on Multimedia (ACM MM), 2024.</i> <br>
+		[<a href="https://openreview.net/forum?id=BfjHOCFvyf">paper</a>]
+		[<a href="https://github.com/DongdingLin/SCREEN">code</a>]
+	    </p>
+	</li>
 	<li><p style="margin-left: 0px; line-height: 140%; margin-top: 10px; margin-bottom: 10px;">
 		<h3>Instruct Once, Chat Consistently in Multiple Rounds: An Efficient Tuning Framework for Dialogue</h3> 
 		<b>Jian Wang</b>, Chak Tou Leong, Jiashuo Wang, Dongding Lin, Wenjie Li, and Xiao-Yong Wei. <br>
@@ -167,7 +184,7 @@
     </li>
 	<li> <p style="margin-left: 0px; line-height: 140%; margin-top: 10px; margin-bottom: 10px;">
 		<h3>Dialogue Planning via Brownian Bridge Stochastic Process for Goal-directed Proactive Dialogue</h3> 
-		<b>Jian Wang</b>, Dongding Lin, and Wenjie Li. <br>
+		<b>Jian Wang</b>*, Dongding Lin*, and Wenjie Li. <br>
 		<i>Findings of the Association for Computational Linguistics: ACL (ACL-Findings), 2023.</i> <br>
 		[<a href="https://arxiv.org/abs/2305.05290">arXiv</a>]
 		[<a href="https://aclanthology.org/2023.findings-acl.25/">paper</a>]
@@ -185,7 +202,7 @@
     </li>
 	<li> <p style="margin-left: 0px; line-height: 140%; margin-top: 10px; margin-bottom: 10px;">
 		<h3>COLA: Improving Conversational Recommender Systems by Collaborative Augmentation</h3>
-		Dongding Lin*, <b>Jian Wang</b>*, and Wenjie Li. &nbsp;&nbsp;&nbsp;&nbsp;(*: Equal Contribution) <br>
+		Dongding Lin*, <b>Jian Wang</b>*, and Wenjie Li. <br>
 		<i>AAAI Conference on Artificial Intelligence (AAAI), 2023.</i> <br>
 		[<a href="https://arxiv.org/abs/2212.07767">arXiv</a>]
 		[<a href="https://ojs.aaai.org/index.php/AAAI/article/view/25567">paper</a>]
@@ -303,7 +320,7 @@
     <strong> Open-Source Projects </strong> <br>
 </p>
 	<ul style="list-style-type:none">
-		<li><a href="https://github.com/iwangjian/Paper-Reading-ConvAI" target="_blank">📖 Paper-Reading-ConvAI</a>: Reading list in dialogue systems and natural language generation.</li>
+		<li><a href="https://github.com/iwangjian/Paper-Reading-ConvAI" target="_blank">📖 Paper-Reading-ConvAI</a>: Paper reading list in conversational AI (dialogue systems and NLG).</li>
 		<li><a href="https://github.com/iwangjian/pyloader" target="_blank">🐳 PyLoader</a>: An asynchronous Python dataloader for loading big datasets.</li>
 	</ul>
 
@@ -342,7 +359,7 @@
         </div>
 	<p>
 		<center>
-        <br> 2020-2024 &copy; Jian Wang | Last updated: August 2024
+        <br> 2020-2024 &copy; Jian Wang | Last updated: Sep. 2024
 		</center>
 	</p>		
 </div>
