--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 <h2> News </h2>
 <p style="text-align:justify";>
 	<p style="text-align:justify";>
-		[Sep. 2024] 🔥 Defended my PhD thesis. Huge thanks to all my committee members!
+		[Sep. 2024] 🔥 Defended my PhD thesis. Huge thanks to my supervisor and committee members!
 	</p>
 	<p style="text-align:justify";>
 		[May 2024] 🔥 Got one paper accepted by <a href="https://2024.aclweb.org/" target="_blank">ACL 2024</a>! Welcome to have a chat in Bangkok.
