--- a/index.html
+++ b/index.html
@@ -96,10 +96,10 @@
 		<b>Conversational AI</b>: Empower conversational agents with goal/target-oriented proactivity (<a href="https://aclanthology.org/2023.findings-acl.25/" target="_blank">ACL-Findings'23</a>, <a href="https://dl.acm.org/doi/10.1145/3652598" target="_blank">TOIS'24</a>, <a href="https://aclanthology.org/2023.emnlp-main.72/" target="_blank">EMNLP'23</a>), role consistentcy (<a href="https://aclanthology.org/2024.acl-long.219/" target="_blank">ACL'24</a>), emotional support (<a href="https://arxiv.org/abs/2312.11792" target="_blank">AAAI'24</a>), etc.
 	</li>
 	<li>
-		<b>Situated & Embodied Intelligence</b>: Explore human-AI interactions in specific  environments or situations (<a href="https://openreview.net/forum?id=BfjHOCFvyf" target="_blank">MM'24</a>), learning from visual perceptions, language communications, and physical actions (<a href="https://arxiv.org/abs/2409.03256" target="_blank">EMNLP-Findings'24</a>).
+		<b>Situated & Embodied Intelligence</b>: Investigate human-AI interactions in specific environments or situations (<a href="https://openreview.net/forum?id=BfjHOCFvyf" target="_blank">MM'24</a>), learning from visual perceptions, language communications, and physical actions (<a href="https://arxiv.org/abs/2409.03256" target="_blank">EMNLP-Findings'24</a>).
 	</li>
 	<li>
-		<b>Large Language Models (LLMs)</b>: Explore LLMs' reasoning capability, toxicity detection and detoxification (<a href="https://aclanthology.org/2023.emnlp-main.269/" target="_blank">EMNLP'23</a>), mechanisms of attacks (<a href="https://arxiv.org/abs/2405.16229" target="_blank">arXiv'24</a>), AI alignment, etc.
+		<b>Large Language Models (LLMs)</b>: Explore LLMs' reasoning & planning, mechanisms of safety alignment (<a href="https://arxiv.org/abs/2405.16229" target="_blank">arXiv'24</a>), etc.
 	</li>
 	</ul>
 </p>
