--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 					<h1> Jian Wang (王健) </h1> 
 				</div>
 
-				<h3>PhD</h3>
+				<h3>Postdoctoral Fellow</h3>
 				<p>
 					Department of Computing, <br>
 					The Hong Kong Polytechnic University, <br>
@@ -29,7 +29,7 @@
 					<b>Email</b>: <tt>jian-dylan.wang (at) connect.polyu.hk</tt> &nbsp or <br>
 					&nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp<tt>jwanglvy (at) gmail.com</tt> <br>
 					<br>
-					<a href="https://iwangjian.github.io/pdf/Jian_Wang_CV.pdf"><img src="pic/cv-96.png" height="25px" style="margin-bottom:-5px"> Curriculum Vitae</a> &nbsp | &nbsp
+					
 					<a href="https://github.com/iwangjian"><img src="pic/github-96.png" height="25px" style="margin-bottom:-5px"> Github</a> &nbsp | &nbsp
 					<a href="https://scholar.google.com/citations?user=HUtas_0gHGIC&hl=en"><img src="pic/google-scholar-96.png" height="25px" style="margin-bottom:-5px"> Google Scholar</a> &nbsp | &nbsp
 					<a href="https://twitter.com/jwanglvy"><img src="pic/twitter-100.png" height="25px" style="margin-bottom:-5px"> Twitter</a>
@@ -46,7 +46,7 @@
 
 
 <p style="text-align:justify";>
-	Hi there! I am a member of <a href="https://polyunlp.github.io/" target="_blank">PolyU NLP Group</a>. I obtained my PhD degree from <a href="https://www.polyu.edu.hk/" target="_blank">The Hong Kong Polytechnic University</a>, 
+	Hi there! I am a Postdoctoral Fellow at <a href="https://polyunlp.github.io/" target="_blank">PolyU NLP Group</a>. I obtained my PhD degree from <a href="https://www.polyu.edu.hk/" target="_blank">The Hong Kong Polytechnic University</a>, 
 	supervised by Prof. <a href="http://www4.comp.polyu.edu.hk/~cswjli/" target="_blank"> Maggie Wenjie Li</a>.
 	During the spring and summer of 2024, I visited the <a href="https://sled.eecs.umich.edu/" target="_blank">SLED Lab</a> at <a href="https://umich.edu/" target="_blank">University of Michigan</a>,
 	where I was so honored to work with Prof. <a href="https://web.eecs.umich.edu/~chaijy/" target="_blank">Joyce Chai</a>.
@@ -92,14 +92,14 @@
 <p style="text-align:justify";>
 	My recent research interests mainly involve the following directions: 
 	<ul>
-	<li> 
-		<b>Conversational AI</b>: Empower conversational agents with goal/target-oriented proactivity (<a href="https://aclanthology.org/2023.findings-acl.25/" target="_blank">ACL-Findings'23</a>, <a href="https://dl.acm.org/doi/10.1145/3652598" target="_blank">TOIS'24</a>, <a href="https://aclanthology.org/2023.emnlp-main.72/" target="_blank">EMNLP'23</a>), role consistentcy (<a href="https://aclanthology.org/2024.acl-long.219/" target="_blank">ACL'24</a>), emotional support (<a href="https://arxiv.org/abs/2312.11792" target="_blank">AAAI'24</a>), etc.
-	</li>
 	<li>
 		<b>Situated & Embodied Intelligence</b>: Investigate human-AI interactions in specific environments or situations (<a href="https://openreview.net/forum?id=BfjHOCFvyf" target="_blank">MM'24</a>), learning from visual perceptions, language communications, and physical actions (<a href="https://arxiv.org/abs/2409.03256" target="_blank">EMNLP-Findings'24</a>).
 	</li>
 	<li>
-		<b>Large Language Models (LLMs)</b>: Explore LLMs' reasoning & planning, mechanisms of safety alignment (<a href="https://arxiv.org/abs/2405.16229" target="_blank">arXiv'24</a>), etc.
+		<b>Large Language Models (LLMs)</b>: Explore LLMs' multi-turn preference learning, mechanisms of safety alignment (<a href="https://arxiv.org/abs/2405.16229" target="_blank">arXiv'24</a>), etc.
+	</li>
+	<li> 
+		<b>Conversational AI</b>: Empower conversational agents with goal-driven proactivity (<a href="https://aclanthology.org/2023.findings-acl.25/" target="_blank">ACL-Findings'23</a>, <a href="https://dl.acm.org/doi/10.1145/3652598" target="_blank">TOIS'24</a>, <a href="https://aclanthology.org/2023.emnlp-main.72/" target="_blank">EMNLP'23</a>), role consistentcy (<a href="https://aclanthology.org/2024.acl-long.219/" target="_blank">ACL'24</a>), emotional support (<a href="https://arxiv.org/abs/2312.11792" target="_blank">AAAI'24</a>), etc.
 	</li>
 	</ul>
 </p>
@@ -192,6 +192,15 @@
 		[<a href="https://arxiv.org/abs/2305.05290">arXiv</a>]
 		[<a href="https://aclanthology.org/2023.findings-acl.25/">paper</a>]
 		[<a href="https://github.com/iwangjian/Color4Dial">code</a>]
+	    </p> 
+    </li>
+	<li> <p style="margin-left: 0px; line-height: 140%; margin-top: 10px; margin-bottom: 10px;">
+		<h3>Medical Dialogue Generation via Dual Flow Modeling</h3> 
+		Kaishuai Xu, Wenjun Hou, Yi Cheng, <b>Jian Wang</b>, and Wenjie Li. <br>
+		<i>Findings of the Association for Computational Linguistics: ACL (ACL-Findings), 2023.</i> <br>
+		[<a href="https://arxiv.org/abs/2305.18109">arXiv</a>]
+		[<a href="https://aclanthology.org/2023.findings-acl.423/">paper</a>]
+		[<a href="https://github.com/kaishxu/DFMed">code</a>]
 	    </p> 
     </li>
 	<li> <p style="margin-left: 0px; line-height: 140%; margin-top: 10px; margin-bottom: 10px;">
@@ -297,8 +306,8 @@
 </p>
 	<ul style="list-style-type:none">
 		<li>Reviewer for ACL Rolling Review (ARR)</li>
-		<li>Conference Reviewer: ACL (2023, 2024), EMNLP (2022, 2023, 2024), COLING (2020, 2022)</li>
-		<li>Journal Reviewer: TKDE, TNNLS</li>
+		<li>Program Committee Member: ACL (2023, 2024), EMNLP (2022, 2023, 2024), COLING (2020, 2022)</li>
+		<li>Journal Reviewer: IEEE Transactions on Neural Networks and Learning Systems (TNNLS), IEEE Transactions on Knowledge and Data Engineering (TKDE)</li>
 	</ul>
 
 <p style="margin-left: 0px; line-height: 120%; margin-top: 15px; margin-bottom: 15px;">
@@ -338,10 +347,10 @@
 <h2> Misc. </h2>
 <ul>
     <li> <p>
-		I enjoy Chinese calligraphy and most outdoor sports (especially basketball, table tennis, and badminton). I also spend my leisure time on variety shows, literature books, and movies.  </p> 
+		I enjoy many ball games such as basketball, table tennis, billiards, and badminton. I also spend my leisure time on variety shows, literature books, and movies.  </p> 
 	</li>
 	<li> <p>
-		I dream of traveling around China and many places around the world someday.</p> 
+		I dream of traveling around China and many places of interest around the world someday.</p> 
 	</li>
 </ul>
 
