--- a/index.html
+++ b/index.html
@@ -130,13 +130,14 @@
 		Hanlin Wang*, Chak Tou Leong*, <b>Jian Wang</b>, and Wenjie Li.  <br>
 		<i>Findings of the Association for Computational Linguistics: EMNLP (EMNLP-Findings), 2024</i> <br>
 		[<a href="https://arxiv.org/abs/2409.03256">arXiv</a>]
+		[<a href="https://aclanthology.org/2024.findings-emnlp.448/">paper</a>]
 	    </p>
 	</li>
 	<li><p style="margin-left: 0px; line-height: 140%; margin-top: 10px; margin-bottom: 10px;"></p>
 		<h3>SCREEN: A Benchmark for Situated Conversational Recommendation</h3> 
 		Dongding Lin*, <b>Jian Wang</b>*, Chak Tou Leong, and Wenjie Li.<br>
 		<i>The 32nd ACM International Conference on Multimedia (ACM MM), 2024.</i> <br>
-		[<a href="https://openreview.net/forum?id=BfjHOCFvyf">paper</a>]
+		[<a href="https://dl.acm.org/doi/10.1145/3664647.3681651">paper</a>]
 		[<a href="https://github.com/DongdingLin/SCREEN">code</a>]
 	    </p>
 	</li>
