--- a/index.html
+++ b/index.html
@@ -93,13 +93,13 @@
 	My recent research interests mainly involve the following directions: 
 	<ul>
 	<li>
-		<b>Situated & Embodied Intelligence</b>: Investigate human-AI interactions in specific environments or situations (<a href="https://openreview.net/forum?id=BfjHOCFvyf" target="_blank">MM'24</a>), learning from visual perceptions, language communications, and physical actions (<a href="https://arxiv.org/abs/2409.03256" target="_blank">EMNLP-Findings'24</a>).
+		<b>Situated & Embodied Intelligence</b>: Investigate human-AI interactions in specific environments or situations, learning from language communications and physical actions (<a href="https://arxiv.org/abs/2409.03256" target="_blank">EMNLP-Findings'24</a>).
 	</li>
 	<li>
 		<b>Large Language Models (LLMs)</b>: Explore LLMs' multi-turn preference learning, mechanisms of safety alignment (<a href="https://arxiv.org/abs/2405.16229" target="_blank">arXiv'24</a>), etc.
 	</li>
 	<li> 
-		<b>Conversational AI</b>: Empower conversational agents with goal-driven proactivity (<a href="https://aclanthology.org/2023.findings-acl.25/" target="_blank">ACL-Findings'23</a>, <a href="https://dl.acm.org/doi/10.1145/3652598" target="_blank">TOIS'24</a>, <a href="https://aclanthology.org/2023.emnlp-main.72/" target="_blank">EMNLP'23</a>), role consistentcy (<a href="https://aclanthology.org/2024.acl-long.219/" target="_blank">ACL'24</a>), emotional support (<a href="https://arxiv.org/abs/2312.11792" target="_blank">AAAI'24</a>), etc.
+		<b>Conversational AI</b>: Empower conversational agents with goal-driven proactivity (<a href="https://aclanthology.org/2023.findings-acl.25/" target="_blank">ACL-Findings'23</a>, <a href="https://ieeexplore.ieee.org/document/10042178" target="_blank">TNNLS'23</a>, <a href="https://dl.acm.org/doi/10.1145/3652598" target="_blank">TOIS'24</a>), role-playing personalization (<a href="https://aclanthology.org/2023.emnlp-main.72/" target="_blank">EMNLP'23</a>), role consistentcy (<a href="https://aclanthology.org/2024.acl-long.219/" target="_blank">ACL'24</a>), emotional support (<a href="https://arxiv.org/abs/2312.11792" target="_blank">AAAI'24</a>), etc.
 	</li>
 	</ul>
 </p>
@@ -308,7 +308,7 @@
 	<ul style="list-style-type:none">
 		<li>Reviewer for ACL Rolling Review (ARR)</li>
 		<li>Program Committee Member: ACL (2023, 2024), EMNLP (2022, 2023, 2024), COLING (2020, 2022)</li>
-		<li>Journal Reviewer: IEEE Transactions on Neural Networks and Learning Systems (TNNLS), IEEE Transactions on Knowledge and Data Engineering (TKDE)</li>
+		<li>Journal Reviewer: IEEE Transactions on Neural Networks and Learning Systems (TNNLS), IEEE Transactions on Knowledge and Data Engineering (TKDE), IEEE Transactions on Multimedia (TMM)</li>
 	</ul>
 
 <p style="margin-left: 0px; line-height: 120%; margin-top: 15px; margin-bottom: 15px;">
@@ -325,7 +325,7 @@
     <strong> Open-Source Projects </strong> <br>
 </p>
 	<ul style="list-style-type:none">
-		<li><a href="https://github.com/iwangjian/Paper-Reading-ConvAI" target="_blank">📖 Paper-Reading-ConvAI</a>: Paper reading list in conversational AI (dialogue systems and NLG).</li>
+		<li><a href="https://github.com/iwangjian/Paper-Reading-ConvAI" target="_blank">📖 Paper-Reading-ConvAI</a>: Paper reading list in conversational AI (⭐ 980+).</li>
 		<li><a href="https://github.com/iwangjian/pyloader" target="_blank">🐳 PyLoader</a>: An asynchronous Python dataloader for loading big datasets.</li>
 	</ul>
 
@@ -364,7 +364,7 @@
         </div>
 	<p>
 		<center>
-        <br> 2020-2024 &copy; Jian Wang | Last updated: Oct. 2024
+        <br> 2020-2024 &copy; Jian Wang | Last updated: Nov. 2024
 		</center>
 	</p>		
 </div>
