--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 					The Hong Kong Polytechnic University, <br>
 					Hung Hom, Kowloon, Hong Kong, China <br>
 					<br>
-					<b>Email</b>: <tt>jian-dylan.wang (at) connect.polyu.hk</tt> &nbsp or <br>
+					<b>Email</b>: <tt>jian51.wang (at) polyu.edu.hk</tt> &nbsp or <br>
 					&nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp<tt>jwanglvy (at) gmail.com</tt> <br>
 					<br>
 					
