--- a/index.html
+++ b/index.html
@@ -62,7 +62,10 @@
 <h2> News </h2>
 <p style="text-align:justify";>
 	<p style="text-align:justify";>
-		[Oct. 2024] 🔥 Will be working as a Postdoctoral Fellow at <a href="https://polyunlp.github.io/" target="_blank">PolyU NLP Group</a>.
+		[Feb. 2025] 🔥 Thrilled to be awarded the PolyU Postdoc Matching Fund.
+	</p>
+	<p style="text-align:justify";>
+		[Oct. 2024] 🔥 Will be working as a Postdoc at <a href="https://polyunlp.github.io/" target="_blank">PolyU NLP Group</a>.
 	</p>
 	<p style="text-align:justify";>
 		[Sep. 2024] 🔥 Defended my PhD thesis. Huge thanks to my supervisor and committee members!
@@ -288,13 +291,18 @@
 <ul style="list-style-type:none"> 
 <p style="line-height: 120%; margin-left: 0px; margin-top: 8pt; margin-bottom: 8pt;">
 	<li>
+		Postdoc Matching Fund, PolyU
+	<li>
+		Research Postgraduate Student Innovation Award (as Co-I), HKU
+	</li>
+	<li>
 		AAAI 2020 Student Scholarship
 	</li>
 	<li>
-		First Class of Graduate Scholarship
+		First Class of Graduate Scholarship, SCUT
 	</li>
 	<li>
-		National Scholarship
+		National Scholarship of China
 	</li>
 </p>
 </ul>
@@ -325,7 +333,7 @@
     <strong> Open-Source Projects </strong> <br>
 </p>
 	<ul style="list-style-type:none">
-		<li><a href="https://github.com/iwangjian/Paper-Reading-ConvAI" target="_blank">📖 Paper-Reading-ConvAI</a>: Paper reading list in conversational AI (⭐ 980+).</li>
+		<li><a href="https://github.com/iwangjian/Paper-Reading-ConvAI" target="_blank">📖 Paper-Reading-ConvAI</a>: Paper reading list in conversational AI (⭐ 990+).</li>
 		<li><a href="https://github.com/iwangjian/pyloader" target="_blank">🐳 PyLoader</a>: An asynchronous Python dataloader for loading big datasets.</li>
 	</ul>
 
@@ -364,7 +372,7 @@
         </div>
 	<p>
 		<center>
-        <br> 2020-2024 &copy; Jian Wang | Last updated: Nov. 2024
+        <br> 2020-2025 &copy; Jian Wang | Last updated: Feb. 2025
 		</center>
 	</p>		
 </div>
