--- a/index.html
+++ b/index.html
@@ -96,37 +96,53 @@
 	My recent research interests mainly involve the following directions: 
 	<ul>
 	<li>
-		<b>Situated & Embodied Intelligence</b>: Investigate human-AI interactions in specific environments or situations, learning from language communications and physical actions (<a href="https://arxiv.org/abs/2409.03256" target="_blank">EMNLP-Findings'24</a>).
-	</li>
-	<li> 
-		<b>Conversational AI</b>: Empower conversational agents with goal-driven proactivity (<a href="https://aclanthology.org/2023.findings-acl.25/" target="_blank">ACL-Findings'23</a>, <a href="https://ieeexplore.ieee.org/document/10042178" target="_blank">TNNLS'23</a>, <a href="https://dl.acm.org/doi/10.1145/3652598" target="_blank">TOIS'24</a>), role-playing personalization (<a href="https://aclanthology.org/2023.emnlp-main.72/" target="_blank">EMNLP'23</a>), role consistentcy (<a href="https://aclanthology.org/2024.acl-long.219/" target="_blank">ACL'24</a>), emotional support (<a href="https://arxiv.org/abs/2312.11792" target="_blank">AAAI'24</a>), etc.
+		<b>Embodied Intelligence</b>: human-agent interactions, embodied agents (<a href="https://arxiv.org/abs/2502.13311" target="_blank">arXiv'25</a>), task planning, etc.
 	</li>
 	<li>
-		<b>Large Language Models (LLMs)</b>: Explore LLMs' multi-turn preference learning, mechanisms of safety alignment (<a href="https://arxiv.org/abs/2405.16229" target="_blank">arXiv'24</a>), etc.
+		<b>Large Language Models (LLMs)</b>: multi-turn alignment, safety alignment (<a href="https://arxiv.org/abs/2502.13946" target="_blank">arXiv'25</a>), test-time scaling, etc.
+	</li>
+	<li> 
+		<b>Conversational AI</b>: Goal-driven proactivity (<a href="https://aclanthology.org/2023.findings-acl.25/" target="_blank">ACL-Findings'23</a>, <a href="https://ieeexplore.ieee.org/document/10042178" target="_blank">TNNLS'23</a>, <a href="https://dl.acm.org/doi/10.1145/3652598" target="_blank">TOIS'24</a>), role-playing personalization (<a href="https://aclanthology.org/2023.emnlp-main.72/" target="_blank">EMNLP'23</a>), role consistentcy (<a href="https://aclanthology.org/2024.acl-long.219/" target="_blank">ACL'24</a>), emotional support (<a href="https://arxiv.org/abs/2312.11792" target="_blank">AAAI'24</a>), etc.
 	</li>
 	</ul>
 </p>
 <p style="text-align:justify";>
-	😀 <i> We are actively seeking highly motivated PhD/master/undergraduate students for collaborative research, including but not limited to the above topics. Please feel free to reach out to me if you are interested.</i>
+	<i> I am actively seeking highly motivated PhD/master/undergraduate students for collaborative research, including but not limited to the above topics. Please feel free to reach out to me if you are interested.</i>
 </p>
 
 
 <h2> Selected Publications
-<h4>(see full list in <a href="https://scholar.google.com/citations?user=HUtas_0gHGIC&hl=en" target="_blank">Google Scholar</a>) (*: equal contribution)</h4>
+<h4>(see full list in <a href="https://scholar.google.com/citations?user=HUtas_0gHGIC&hl=en" target="_blank">Google Scholar</a>) (*: Equal contribution; <sup>†</sup>: Corresponding author)</h4>
 </h2>
 
 <p> Preprint </p>
 <ul>
 	<li><p style="margin-left: 0px; line-height: 140%; margin-top: 10px; margin-bottom: 10px;">
-		<h3>No Two Devils Alike: Unveiling Distinct Mechanisms of Fine-tuning Attacks</h3> 
-		Chak Tou Leong, Yi Cheng, Kaishuai Xu, <b>Jian Wang</b>, Hanlin Wang, Wenjie Li<br>
-		<i>arXiv:2405.16229, 2024.</i> <br>
-		[<a href="https://arxiv.org/abs/2405.16229">arXiv</a>]
+		<h3>Training Turn-by-Turn Verifiers for Dialogue Tutoring Agents: The Curious Case of LLMs as Your Coding Tutors</h3> 
+		<b>Jian Wang</b>, Yinpei Dai, Yichi Zhang, Ziqiao Ma, Wenjie Li, and Joyce Chai.<br>
+		<i>arXiv:2502.13311.</i> <br>
+		[<a href="https://arxiv.org/abs/2502.13311">arXiv</a>]
+		[<a href="https://github.com/iwangjian/Coding-Tutor">code</a>]
+	    </p>
+	</li>
+	<li><p style="margin-left: 0px; line-height: 140%; margin-top: 10px; margin-bottom: 10px;">
+		<h3>STeCa: Step-level Trajectory Calibration for LLM Agent Learning</h3> 
+		Hanlin Wang, <b>Jian Wang</b><sup>†</sup>, Chak Tou Leong, and Wenjie Li.<br>
+		<i>arXiv:</i> <br>
+		[<a href="">arXiv</a>]
+		[<a href="https://github.com/WangHanLinHenry/STeCa">code</a>]
+	    </p>
+	</li>
+	<li><p style="margin-left: 0px; line-height: 140%; margin-top: 10px; margin-bottom: 10px;">
+		<h3>Why Safeguarded Ships Run Aground? Aligned Large Language Models' Safety Mechanisms Tend to Be Anchored in The Template Region</h3> 
+		Chak Tou Leong, Qingyu Yin, <b>Jian Wang</b><sup>†</sup>, and Wenjie Li<sup>†</sup><br>
+		<i>arXiv:2502.13946.</i> <br>
+		[<a href="https://arxiv.org/abs/2502.13946">arXiv</a>]
 	    </p>
 	</li>
 </ul>
 
-<p> 2021 - Present </p>
+<p> 2021 - 2024 (PhD period)</p>
 <ul>
 	<li><p style="margin-left: 0px; line-height: 140%; margin-top: 10px; margin-bottom: 10px;"></p>
 		<h3>E2CL: Exploration-based Error Correction Learning for Embodied Agents</h3> 
