--- a/index.html
+++ b/index.html
@@ -95,15 +95,15 @@
 <p style="text-align:justify";>
 	My recent research interests mainly involve the following directions: 
 	<ul>
-	<li>
-		<b>Embodied Intelligence</b>: human-agent interactions, embodied agents (<a href="https://arxiv.org/abs/2502.13311" target="_blank">arXiv'25</a>), task planning, etc.
-	</li>
-	<li>
-		<b>Large Language Models (LLMs)</b>: multi-turn alignment, safety alignment (<a href="https://arxiv.org/abs/2502.13946" target="_blank">arXiv'25</a>), test-time scaling, etc.
-	</li>
-	<li> 
-		<b>Conversational AI</b>: Goal-driven proactivity (<a href="https://aclanthology.org/2023.findings-acl.25/" target="_blank">ACL-Findings'23</a>, <a href="https://ieeexplore.ieee.org/document/10042178" target="_blank">TNNLS'23</a>, <a href="https://dl.acm.org/doi/10.1145/3652598" target="_blank">TOIS'24</a>), role-playing personalization (<a href="https://aclanthology.org/2023.emnlp-main.72/" target="_blank">EMNLP'23</a>), role consistentcy (<a href="https://aclanthology.org/2024.acl-long.219/" target="_blank">ACL'24</a>), emotional support (<a href="https://arxiv.org/abs/2312.11792" target="_blank">AAAI'24</a>), etc.
-	</li>
+		<li>
+			<b>Large Language Models (LLMs)</b>: test-time scaling, safety alignment (<a href="https://arxiv.org/abs/2502.13946" target="_blank">arXiv'25</a>), multi-turn fine-tuning (<a href="https://aclanthology.org/2024.acl-long.219/" target="_blank">ACL'24</a>), etc.
+		</li>
+		<li>
+			<b>Embodied Intelligence</b>: human-agent interactions, embodied agents (<a href="https://arxiv.org/abs/2502.13311" target="_blank">arXiv'25</a>), task planning (<a href="https://arxiv.org/abs/2502.14276" target="_blank">arXiv'25</a>), etc.
+		</li>
+		<li> 
+			<b>Conversational AI</b>: Goal-driven proactivity (<a href="https://aclanthology.org/2023.findings-acl.25/" target="_blank">ACL-Findings'23</a>, <a href="https://ieeexplore.ieee.org/document/10042178" target="_blank">TNNLS'23</a>, <a href="https://dl.acm.org/doi/10.1145/3652598" target="_blank">TOIS'24</a>), role-playing personalization (<a href="https://aclanthology.org/2023.emnlp-main.72/" target="_blank">EMNLP'23</a>), role consistentcy (<a href="https://aclanthology.org/2024.acl-long.219/" target="_blank">ACL'24</a>), emotional support (<a href="https://arxiv.org/abs/2312.11792" target="_blank">AAAI'24</a>), etc.
+		</li>
 	</ul>
 </p>
 <p style="text-align:justify";>
@@ -128,14 +128,14 @@
 	<li><p style="margin-left: 0px; line-height: 140%; margin-top: 10px; margin-bottom: 10px;">
 		<h3>STeCa: Step-level Trajectory Calibration for LLM Agent Learning</h3> 
 		Hanlin Wang, <b>Jian Wang</b><sup>†</sup>, Chak Tou Leong, and Wenjie Li.<br>
-		<i>arXiv:</i> <br>
-		[<a href="">arXiv</a>]
+		<i>arXiv:2502.14276.</i> <br>
+		[<a href="https://arxiv.org/abs/2502.14276">arXiv</a>]
 		[<a href="https://github.com/WangHanLinHenry/STeCa">code</a>]
 	    </p>
 	</li>
 	<li><p style="margin-left: 0px; line-height: 140%; margin-top: 10px; margin-bottom: 10px;">
 		<h3>Why Safeguarded Ships Run Aground? Aligned Large Language Models' Safety Mechanisms Tend to Be Anchored in The Template Region</h3> 
-		Chak Tou Leong, Qingyu Yin, <b>Jian Wang</b><sup>†</sup>, and Wenjie Li<sup>†</sup><br>
+		Chak Tou Leong, Qingyu Yin, <b>Jian Wang</b><sup>†</sup>, and Wenjie Li<sup>†</sup>.<br>
 		<i>arXiv:2502.13946.</i> <br>
 		[<a href="https://arxiv.org/abs/2502.13946">arXiv</a>]
 	    </p>
@@ -331,7 +331,7 @@
 </p>
 	<ul style="list-style-type:none">
 		<li>Reviewer for ACL Rolling Review (ARR)</li>
-		<li>Program Committee Member: ACL (2023, 2024), EMNLP (2022, 2023, 2024), COLING (2020, 2022)</li>
+		<li>Program Committee Member: ACL (2023, 2024, 2025), EMNLP (2022, 2023, 2024), COLING (2020, 2022)</li>
 		<li>Journal Reviewer: IEEE Transactions on Neural Networks and Learning Systems (TNNLS), IEEE Transactions on Knowledge and Data Engineering (TKDE), IEEE Transactions on Multimedia (TMM)</li>
 	</ul>
 
