--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 			<b>Embodied Intelligence</b>: human-agent interactions, embodied agents (<a href="https://arxiv.org/abs/2502.13311" target="_blank">arXiv'25</a>), task planning (<a href="https://arxiv.org/abs/2502.14276" target="_blank">arXiv'25</a>), etc.
 		</li>
 		<li> 
-			<b>Conversational AI</b>: Goal-driven proactivity (<a href="https://aclanthology.org/2023.findings-acl.25/" target="_blank">ACL-Findings'23</a>, <a href="https://ieeexplore.ieee.org/document/10042178" target="_blank">TNNLS'23</a>, <a href="https://dl.acm.org/doi/10.1145/3652598" target="_blank">TOIS'24</a>), role-playing personalization (<a href="https://aclanthology.org/2023.emnlp-main.72/" target="_blank">EMNLP'23</a>), role consistentcy (<a href="https://aclanthology.org/2024.acl-long.219/" target="_blank">ACL'24</a>), emotional support (<a href="https://arxiv.org/abs/2312.11792" target="_blank">AAAI'24</a>), etc.
+			<b>Conversational AI</b>: goal-driven proactivity (<a href="https://aclanthology.org/2023.findings-acl.25/" target="_blank">ACL-Findings'23</a>, <a href="https://ieeexplore.ieee.org/document/10042178" target="_blank">TNNLS'23</a>, <a href="https://dl.acm.org/doi/10.1145/3652598" target="_blank">TOIS'24</a>), role-playing personalization (<a href="https://aclanthology.org/2023.emnlp-main.72/" target="_blank">EMNLP'23</a>), role consistentcy (<a href="https://aclanthology.org/2024.acl-long.219/" target="_blank">ACL'24</a>), emotional support (<a href="https://arxiv.org/abs/2312.11792" target="_blank">AAAI'24</a>), etc.
 		</li>
 	</ul>
 </p>
@@ -349,7 +349,7 @@
     <strong> Open-Source Projects </strong> <br>
 </p>
 	<ul style="list-style-type:none">
-		<li><a href="https://github.com/iwangjian/Paper-Reading-ConvAI" target="_blank">📖 Paper-Reading-ConvAI</a>: Paper reading list in conversational AI (⭐ 990+).</li>
+		<li><a href="https://github.com/iwangjian/Paper-Reading-ConvAI" target="_blank">📖 Paper-Reading-ConvAI</a>: Paper reading list in conversational AI (⭐ 1k+).</li>
 		<li><a href="https://github.com/iwangjian/pyloader" target="_blank">🐳 PyLoader</a>: An asynchronous Python dataloader for loading big datasets.</li>
 	</ul>
 
@@ -361,7 +361,7 @@
 	<li> 📝 Writing Perfect Papers (<a href="https://www.bilibili.com/video/BV18v411n7mr/?spm_id_from=333.999.0.0" target="_blank">Bilibili</a> | 
 		<a href="https://www.youtube.com/watch?v=nUnmQmOOG4E" target="_blank">Youtube</a> |
 		<a href="https://iqua.ece.toronto.edu/papers/writing-perfect-papers-2021.pdf" target="_blank">Slides</a>): A long talk on writing "perfect papers" (by Prof. Baochun Li). </li>
-	<li> <a href="https://ruder.io/" target="_blank">📰 Sebastian Ruder's Blog</a>: Sebastian Ruder's blog with deep insights about NLP/ML/DL.</li>
+	<li> <a href="https://www.ruder.io/" target="_blank">📰 Sebastian Ruder's Blog</a>: Sebastian Ruder's blog with deep insights about NLP/ML/DL.</li>
 	<li> <a href="https://lilianweng.github.io/" target="_blank">🍑 Lilian Weng's Blog</a>:  Lilian Weng's blog with broad learning notes about DL/NLP.</li>
 	<li> <a href="https://jalammar.github.io/" target="_blank">📸 Jay Alammar's Blog</a>: Visualizations and animations for many language models (Transformer, BERT, etc). </li>
 	<li> <a href="https://kexue.fm/" target="_blank">📡 Scientific Spaces</a>: Jianlin Su's blog (in Chinese) about ML|NLP theories with deep explorations.</li>
