--- a/index.html
+++ b/index.html
@@ -30,8 +30,9 @@
 					&nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp<tt>jwanglvy (at) gmail.com</tt> <br>
 					<br>
 					
-					<a href="https://github.com/iwangjian"><img src="pic/github-96.png" height="25px" style="margin-bottom:-5px"> Github</a> &nbsp | &nbsp
 					<a href="https://scholar.google.com/citations?user=HUtas_0gHGIC&hl=en"><img src="pic/google-scholar-96.png" height="25px" style="margin-bottom:-5px"> Google Scholar</a> &nbsp | &nbsp
+					<a href="https://github.com/iwangjian"><img src="pic/github-96.png" height="25px" style="margin-bottom:-5px"> Github</a> &nbsp | &nbsp
+					<a href="pic/WeChat.png"><img src="pic/wechat-100.png" height="25px" style="margin-bottom:-5px"> WeChat</a> &nbsp | &nbsp
 					<a href="https://twitter.com/jwanglvy"><img src="pic/twitter-100.png" height="25px" style="margin-bottom:-5px"> Twitter</a>
 				
 				</p>
@@ -68,7 +69,7 @@
 		[Oct. 2024] 🔥 Will be working as a Postdoc at <a href="https://polyunlp.github.io/" target="_blank">PolyU NLP Group</a>.
 	</p>
 	<p style="text-align:justify";>
-		[Sep. 2024] 🔥 Defended my PhD thesis. Huge thanks to my supervisor and committee members!
+		[Sep. 2024] Defended my PhD thesis. Huge thanks to my supervisor and committee members!
 	</p>
 	<p style="text-align:justify";>
 		[May 2024] &nbsp Got one paper accepted by <a href="https://2024.aclweb.org/" target="_blank">ACL 2024</a>! Welcome to have a chat in Bangkok.
@@ -107,7 +108,7 @@
 	</ul>
 </p>
 <p style="text-align:justify";>
-	<i> I am actively seeking highly motivated PhD/master/undergraduate students for collaborative research, including but not limited to the above topics. Please feel free to reach out to me if you are interested.</i>
+	👉 <i> I am actively seeking highly motivated PhD/master/undergraduate students for collaborative research, including but not limited to the above topics. Please feel free to reach out to me if you are interested.</i>
 </p>
 
 
@@ -285,7 +286,7 @@
 <h2> Experiences </h2>
 <ul>
 	<li> 
-		2024/02 - 2024/06: Visiting PhD Student at <a href="https://umich.edu/" target="_blank">University of Michigan</a>
+		2024/02 - 2024/06: Visiting PhD student at <a href="https://umich.edu/" target="_blank">University of Michigan</a>
 		(Advisor: Prof. <a href="https://web.eecs.umich.edu/~chaijy/" target="_blank">	Joyce Chai</a>)
 	</li>
 	<li> 
@@ -309,7 +310,7 @@
 	<li>
 		Postdoc Matching Fund, PolyU
 	<li>
-		Research Postgraduate Student Innovation Award (as Co-I), HKU
+		Research Postgraduate Student Innovation Award, HKU
 	</li>
 	<li>
 		AAAI 2020 Student Scholarship
@@ -331,7 +332,7 @@
 </p>
 	<ul style="list-style-type:none">
 		<li>Reviewer for ACL Rolling Review (ARR)</li>
-		<li>Program Committee Member: ACL (2023, 2024, 2025), EMNLP (2022, 2023, 2024), COLING (2020, 2022)</li>
+		<li>Program Committee Member: NeurIPS (2025 - ), ACL (2023 - ), EMNLP (2022 - ), COLING (2020, 2022)</li>
 		<li>Journal Reviewer: IEEE Transactions on Neural Networks and Learning Systems (TNNLS), IEEE Transactions on Knowledge and Data Engineering (TKDE), IEEE Transactions on Multimedia (TMM)</li>
 	</ul>
 
@@ -388,7 +389,7 @@
         </div>
 	<p>
 		<center>
-        <br> 2020-2025 &copy; Jian Wang | Last updated: Feb. 2025
+        <br> 2020-2025 &copy; Jian Wang | Last updated: Apr. 2025
 		</center>
 	</p>		
 </div>
