--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 		[Oct. 2024] 🔥 Will be working as a Postdoc at <a href="https://polyunlp.github.io/" target="_blank">PolyU NLP Group</a>.
 	</p>
 	<p style="text-align:justify";>
-		[Sep. 2024] Defended my PhD thesis. Huge thanks to my supervisor and committee members!
+		[Sep. 2024] &nbsp Defended my PhD thesis. Huge thanks to my supervisor and committee members!
 	</p>
 	<p style="text-align:justify";>
 		[May 2024] &nbsp Got one paper accepted by <a href="https://2024.aclweb.org/" target="_blank">ACL 2024</a>! Welcome to have a chat in Bangkok.
